Fixed resume thumb spacing issue

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -276,7 +276,7 @@ h6
 				height auto
 
 	.resume-container
-		-wrapper( 0, 0, 50% )
+		-wrapper( 0, 0, 95% )
 		-clearfix()
 
 		a
@@ -472,6 +472,15 @@ h6
 				img
 					width 100%
 					height auto
+
+		.resume-container
+			width 50% // Adjusts wrapper
+
+			a
+				display block
+
+			img
+				max-width 46%
 
 
 	#contact
